--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/_ViewImports.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @inherits OrchardCore.DisplayManagement.Razor.RazorPage<TModel>
 
+@using OrchardCore.DisplayManagement
 @using OrchardCore.DisplayManagement.Views
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
