--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/ChatProfiles/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/ChatProfiles/Index.cshtml
@@ -4,7 +4,7 @@
 
 @model ListChatProfilesViewModel
 
-<zone Name="Title"><h1>@RenderTitleSegments(T["AI Chat Profiles"])</h1></zone>
+<zone Name="Title"><h1>@RenderTitleSegments(T["OpenAI Chat Profiles"])</h1></zone>
 
 @* the form is necessary to generate an antiforgery token for the delete and toggle actions *@
 <form asp-action="Index" method="post" class="no-multisubmit">
