--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Deployments/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Deployments/Index.cshtml
@@ -5,7 +5,7 @@
 @model ListDeploymentsViewModel
 
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["Model Deployments"])</h1>
+    <h1>@RenderTitleSegments(T["OpenAI Deployments"])</h1>
 </zone>
 
 @* the form is necessary to generate an antiforgery token for the delete and toggle actions *@
