--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AdminChat/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AdminChat/Index.cshtml
@@ -12,7 +12,7 @@
 
     @if (Model.History is not null && Model.History.Count > 0)
     {
-        <div class="d-none d-md-block flex-shrink-0 bg-theme p-2 border rounded-end rounded-top" style="width: 20rem;">
+        <div class="d-none d-md-block flex-shrink-0 bg-theme p-2 border rounded" style="width: 20rem; height: calc(100vh - 2rem - var(--oc-top-nav-height, 0)); overflow-y:auto">
             <div class="list-group">
                 @foreach (var record in Model.History)
                 {
