--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Items/ChatUtilityCompletionTask.Fields.Design.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Items/ChatUtilityCompletionTask.Fields.Design.cshtml
@@ -7,6 +7,6 @@
 <header>
     <h4>
         <i class="fa-regular fa-comment" aria-hidden="true"></i>
-        @Model.Activity.GetTitleOrDefault(() => T["Chat Utility Completion Task. Property {0}.", Model.Activity.ResultPropertyName])
+        @Model.Activity.GetTitleOrDefault(() => T["Chat Utility Completion. Property {0}.", Model.Activity.ResultPropertyName])
     </h4>
 </header>
