--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Widget-OpenAIChatWidget.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Widget-OpenAIChatWidget.cshtml
@@ -179,7 +179,7 @@
                         </div>
                         <div class="py-2 px-1 lh-base">
                             <h4 v-if="message.title">{{ message.title }}</h4>
-                            <div v-html="message.contentHTML || message.content"></div>
+                            <div v-html="message.htmlContent || message.content"></div>
                         </div>
                     </div>
 
