--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Items/ChatUtilityCompletionTask.Fields.Thumbnail.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Items/ChatUtilityCompletionTask.Fields.Thumbnail.cshtml
@@ -3,4 +3,7 @@
 
 @model ActivityViewModel<ChatUtilityCompletionTask>
 
-<h4 class="card-title"><i class="fa-solid fa-pencil" aria-hidden="true"></i>@T["Chat Utility Completion Task."]</h4>
+<h4 class="card-title">
+    <i class="fa-solid fa-pencil" aria-hidden="true"></i>
+    @T["Chat Utility Completion."]
+</h4>
