Simplify Azure With Search Implementation

--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfile.Link.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfile.Link.cshtml
@@ -17,7 +17,7 @@
             <a class="btn btn-primary btn-sm"
                asp-route-action="Create"
                asp-route-controller="ChatProfiles"
-               asp-route-id="@source">@T["Add"]</a>
+               asp-route-source="@source">@T["Add"]</a>
         </div>
     </div>
 </div>
