--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIDeployment.Link.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIDeployment.Link.cshtml
@@ -23,7 +23,7 @@
             <a class="btn btn-primary btn-sm"
                asp-route-action="Create"
                asp-route-controller="Deployments"
-               asp-route-id="@source">@T["Add"]</a>
+               asp-route-source="@source">@T["Add"]</a>
         </div>
 
     </div>
