--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Widget-OpenAIChatWidget.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Widget-OpenAIChatWidget.cshtml
@@ -98,7 +98,7 @@
     <div class="chat-input p-2 ">
 
         <div class="text-bg-light rounded-5 w-100 border">
-            <textarea class="form-control bg-transparent border-0 chat-user-prompt-input" id="@userPromptHtmlId" data-session-id="" data-profile-id="@(profile.Id)" placeholder="@T["Message AI Chat"] ..." aria-label="@T["Message AI Chat"]" aria-describedby="@buttonHtmlId"></textarea>
+            <textarea class="form-control bg-transparent border-0 chat-user-prompt-input p-3" id="@userPromptHtmlId" data-session-id="" data-profile-id="@(profile.Id)" placeholder="@T["Message AI Chat"] ..." aria-label="@T["Message AI Chat"]" aria-describedby="@buttonHtmlId"></textarea>
 
             <div class="d-flex justify-content-between px-3 my-2">
                 <div>
