--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfileMetadata.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfileMetadata.Edit.cshtml
@@ -16,7 +16,7 @@
     <label asp-for="Temperature" class="@Orchard.GetLabelClasses()">@T["Temperature"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="Temperature" step="0.01" min="0" max="1">
-        <span class="hint">@T["Controls randomness. Lowering the temperature means that the model will produce more repetitive and deterministic responses. Increasing the temperature will result in more unexpected or creative responses. Try adjusting temperature or Top P but not both.. Leave it blank to use the current default of {0}.", OpenAIConstants.DefaultTemperature]</span>
+        <span class="hint">@T["Controls randomness. Lowering the temperature means that the model will produce more repetitive and deterministic responses. Increasing the temperature will result in more unexpected or creative responses. Try adjusting temperature or Top P but not both. Leave it blank to use the current default of {0}.", OpenAIConstants.DefaultTemperature]</span>
     </div>
 </div>
 
@@ -24,7 +24,7 @@
     <label asp-for="TopP" class="@Orchard.GetLabelClasses()">@T["Top P"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="TopP" step="0.01" min="0" max="1">
-        <span class="hint">@T["Similar to temperature, this controls randomness but uses a different method. Lowering Top P will narrow the model’s token selection to likelier tokens. Increasing Top P will let the model choose from tokens with both high and low likelihood. Try adjusting temperature or Top P but not both.. Leave it blank to use the current default of {0}.", OpenAIConstants.DefaultTopP]</span>
+        <span class="hint">@T["Similar to temperature, this controls randomness but uses a different method. Lowering Top P will narrow the model’s token selection to likelier tokens. Increasing Top P will let the model choose from tokens with both high and low likelihood. Try adjusting temperature or Top P but not both. Leave it blank to use the current default of {0}.", OpenAIConstants.DefaultTopP]</span>
     </div>
 </div>
 
