Fix NRX in OpenAIChatProfileDisplayDriver (#34)

--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfileFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfileFields.Edit.cshtml
@@ -100,7 +100,10 @@
 }
 
 <style asp-name="codemirror"></style>
+<style asp-name="mdecss" asp-src="~/OrchardCore.Markdown/Styles/mde.min.css" debug-src="~/OrchardCore.Markdown/Styles/mde.css"></style>
+
 <script asp-name="codemirror" at="Foot"></script>
+<script asp-src="~/OrchardCore.Markdown/Scripts/mde.mediatoolbar.min.js" debug-src="~/OrchardCore.Markdown/Scripts/mde.mediatoolbar.js" depends-on="jQuery" at="Foot"></script>
 <script asp-name="codemirror-mode-javascript" at="Foot"></script>
 <script asp-name="codemirror-addon-display-autorefresh" at="Foot"></script>
 <script asp-name="codemirror-addon-mode-simple" at="Foot"></script>
@@ -156,5 +159,38 @@
         profileType.dispatchEvent(new Event('change'));
 
         initializeLiquidEditor(document.getElementById('@Html.IdFor(x => x.PromptTemplate)'));
+
+        const isRtl = @(Orchard.IsRightToLeft() ? "true" : "false");
+        const systemMessageElement = document.getElementById("@Html.IdFor(m => m.SystemMessage)");
+        var mde = new EasyMDE({
+            element: systemMessageElement,
+            forceSync: true,
+            toolbar: mdeToolbar,
+            autoDownloadFontAwesome: false
+        });
+
+        initializeMdeShortcodeWrapper(mde);
+
+        mde.codemirror.on('change', function () {
+            document.dispatchEvent(new Event('contentpreview:render'));
+        });
+
+        if (isRtl)
+        {
+            var toolbarEditors = document.querySelectorAll('.editor-toolbar');
+
+            for (var i = 0; i < toolbarEditors.length; i++)
+            {
+                toolbarEditors[i].style.direction = 'rtl';
+                toolbarEditors[i].style.textAlign = 'right';
+            }
+
+            var mirrorContainers = document.querySelectorAll('.CodeMirror');
+
+            for (var i = 0; i < mirrorContainers.length; i++)
+            {
+                mirrorContainers[i].style.textAlign = 'right';
+            }
+        }
     });
 </script>
