--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfile.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfile.Buttons.SummaryAdmin.cshtml
@@ -9,8 +9,11 @@
    asp-route-id="@Model.Value.Id"
    class="btn btn-primary btn-sm">@T["Edit"]</a>
 
-<a asp-action="Delete"
-   asp-controller="ChatProfiles"
-   asp-route-id="@Model.Value.Id"
-   class="btn btn-danger btn-sm"
-   data-url-af="RemoveUrl UnsafeUrl">@T["Delete"]</a>
+@if (Model.Value.GetSettings<OpenAIChatProfileSettings>().IsRemovable)
+{
+    <a asp-action="Delete"
+       asp-controller="ChatProfiles"
+       asp-route-id="@Model.Value.Id"
+       class="btn btn-danger btn-sm"
+       data-url-af="RemoveUrl UnsafeUrl">@T["Delete"]</a>
+}
