--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfileFields.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfileFields.Edit.cshtml
@@ -42,9 +42,19 @@
 
 <div class="@Orchard.GetWrapperClasses()">
     <label asp-for="SystemMessage" class="@Orchard.GetLabelClasses()">@T["System description"]</label>
+    <span class="hint">@T["The system message in OpenAI sets the AI's behavior and response style, guiding how it interacts in a conversation."]</span>
     <div class="@Orchard.GetEndClasses()">
-        <textarea asp-for="SystemMessage" class="form-control content-preview-text" rows="5"></textarea>
-        <span class="hint">@T["The system message in OpenAI sets the AI's behavior and response style, guiding how it interacts in a conversation."]</span>
+        <textarea asp-for="SystemMessage" class="form-control content-preview-text" rows="5" disabled="@Model.IsSystemMessageLocked"></textarea>
+    </div>
+</div>
+
+<div class="@Orchard.GetWrapperClasses("profile-type profile-type-chat")">
+    <div class="@Orchard.GetEndClasses(true)">
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" asp-for="IsOnAdminMenu">
+            <label class="form-check-label" asp-for="IsOnAdminMenu">@T["Show on admin menu"]</label>
+            <span class="hint dashed">@T["When enabled, the profile will be added to the admin menu."]</span>
+        </div>
     </div>
 </div>
 
@@ -70,7 +80,7 @@
     <div class="@Orchard.GetEndClasses()">
         <input asp-for="WelcomeMessage" class="form-control" />
         <span asp-validation-for="WelcomeMessage" class="text-danger"></span>
-        <span class="hint">@T["The welcome message to show on the UI when a new session is created."]</span>
+        <span class="hint">@T["The welcome message to show on the user-interface when a new session is created."]</span>
     </div>
 </div>
 
@@ -85,7 +95,7 @@
 
 @if (Model.Functions != null && Model.Functions.Length > 0)
 {
-    <h6>@T["Available Functions"]</h6>
+    <h6>@T["Available functions"]</h6>
     <div class="mb-3">
         @for (var i = 0; i < Model.Functions.Length; i++)
         {
@@ -161,22 +171,26 @@
         initializeLiquidEditor(document.getElementById('@Html.IdFor(x => x.PromptTemplate)'));
 
         const isRtl = @(Orchard.IsRightToLeft() ? "true" : "false");
+        const isDisabled = @(Model.IsSystemMessageLocked ? "true" : "false");
+
         const systemMessageElement = document.getElementById("@Html.IdFor(m => m.SystemMessage)");
         var mde = new EasyMDE({
             element: systemMessageElement,
             forceSync: true,
+            readOnly: isDisabled ? 'nocursor' : false,
             toolbar: mdeToolbar,
             autoDownloadFontAwesome: false
         });
-
-        initializeMdeShortcodeWrapper(mde);
 
         mde.codemirror.on('change', function () {
             document.dispatchEvent(new Event('contentpreview:render'));
         });
 
-        if (isRtl)
-        {
+        if (isDisabled) {
+            systemMessageElement.parentNode.querySelector(".CodeMirror").classList.add('cm-editor-readonly');
+        }
+
+        if (isRtl) {
             var toolbarEditors = document.querySelectorAll('.editor-toolbar');
 
             for (var i = 0; i < toolbarEditors.length; i++)
@@ -194,3 +208,9 @@
         }
     });
 </script>
+
+<style at="Foot">
+    .cm-editor-readonly {
+        background-color: var(--bs-secondary-bg, '#e9ecef') !important;
+    }
+</style>
