--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Widget-AIChat.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Widget-AIChat.cshtml
@@ -13,7 +13,7 @@
 @{
     ContentItem contentItem = Model.ContentItem;
 
-    var part = contentItem.As<AIChatWidgetPart>();
+    var part = contentItem.As<AIChatProfilePart>();
 
     if (string.IsNullOrEmpty(part?.ProfileId))
     {
