--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfileMetadata.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/OpenAIChatProfileMetadata.Edit.cshtml
@@ -9,6 +9,14 @@
 @inject IOptions<DefaultOpenAIOptions> OpenAIOptions
 
 <div class="@Orchard.GetWrapperClasses()">
+    <label asp-for="SystemMessage" class="@Orchard.GetLabelClasses()">@T["System description"]</label>
+    <span class="hint">@T["The system message in OpenAI sets the AI's behavior and response style, guiding how it interacts in a conversation."]</span>
+    <div class="@Orchard.GetEndClasses()">
+        <textarea asp-for="SystemMessage" class="form-control content-preview-text" rows="5" disabled="@Model.IsSystemMessageLocked"></textarea>
+    </div>
+</div>
+
+<div class="@Orchard.GetWrapperClasses()">
     <label asp-for="MaxTokens" class="@Orchard.GetLabelClasses()">@T["Max response"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="MaxTokens" step="4" min="4">
@@ -55,3 +63,53 @@
         <span class="hint">@T["Select the number of past messages to include in each new API request. This helps give the model context for new user queries. Setting this number to 10 will include 5 user queries and 5 system responses. Leave it blank to use the app default of {0}.", OpenAIOptions.Value.PastMessagesCount]</span>
     </div>
 </div>
+
+<style asp-name="codemirror"></style>
+<style asp-name="mdecss" asp-src="~/OrchardCore.Markdown/Styles/mde.min.css" debug-src="~/OrchardCore.Markdown/Styles/mde.css"></style>
+
+<script at="Foot">
+    document.addEventListener('DOMContentLoaded', function () {
+        const isRtl = @(Orchard.IsRightToLeft() ? "true" : "false");
+        const isDisabled = @(Model.IsSystemMessageLocked ? "true" : "false");
+
+        const systemMessageElement = document.getElementById("@Html.IdFor(m => m.SystemMessage)");
+        var mde = new EasyMDE({
+            element: systemMessageElement,
+            forceSync: true,
+            readOnly: isDisabled ? 'nocursor' : false,
+            toolbar: mdeToolbar,
+            autoDownloadFontAwesome: false
+        });
+
+        mde.codemirror.on('change', function () {
+            document.dispatchEvent(new Event('contentpreview:render'));
+        });
+
+        if (isDisabled) {
+            systemMessageElement.parentNode.querySelector(".CodeMirror").classList.add('cm-editor-readonly');
+        }
+
+        if (isRtl) {
+            var toolbarEditors = document.querySelectorAll('.editor-toolbar');
+
+            for (var i = 0; i < toolbarEditors.length; i++)
+            {
+                toolbarEditors[i].style.direction = 'rtl';
+                toolbarEditors[i].style.textAlign = 'right';
+            }
+
+            var mirrorContainers = document.querySelectorAll('.CodeMirror');
+
+            for (var i = 0; i < mirrorContainers.length; i++)
+            {
+                mirrorContainers[i].style.textAlign = 'right';
+            }
+        }
+    });
+</script>
+
+<style at="Foot">
+    .cm-editor-readonly {
+        background-color: var(--bs-secondary-bg, '#e9ecef') !important;
+    }
+</style>
